--- a/.github/workflows/parse-submission.yml
+++ b/.github/workflows/parse-submission.yml
@@ -24,72 +24,6 @@ jobs:
         run: |
           pip install clicksend-client ics pyyaml
 
-      - name: Extract volunteer name and shifts from issue body
-        id: extract
+      - name: Process submission
         run: |
-          ISSUE_BODY=$(jq -r .issue.body "$GITHUB_EVENT_PATH")
-
-          echo "📄 Raw issue body:"
-          echo "$ISSUE_BODY"
-          echo "-----"
-
-          NAME=$(echo "$ISSUE_BODY" | sed -n '/### Full Name/{n;p;}' | xargs)
-          PHONE=$(echo "$ISSUE_BODY" | sed -n '/### Phone Number/{n;p;}' | xargs)
-
-          SHIFTS=$(echo "$ISSUE_BODY" | awk '/### What shifts are you available for\?/{flag=1; next} /^### /{flag=0} flag')
-          CLEANED_SHIFTS=$(echo "$SHIFTS" | sed '/^\s*$/d')
-
-          echo "👤 Name: '$NAME'"
-          echo "📱 Phone: '$PHONE'"
-          echo "📆 Shifts:"
-          echo "$CLEANED_SHIFTS"
-
-          if [ -z "$NAME" ] || [ -z "$CLEANED_SHIFTS" ]; then
-            echo "❌ Error: Missing required 'name' or 'shifts'"
-            exit 1
-          fi
-
-          echo "name=$NAME" >> $GITHUB_OUTPUT
-          echo "phone=$PHONE" >> $GITHUB_OUTPUT
-          echo "shifts<<EOF" >> $GITHUB_OUTPUT
-          echo "$CLEANED_SHIFTS" >> $GITHUB_OUTPUT
-          echo "EOF" >> $GITHUB_OUTPUT
-
-      - name: Parse shifts and run volunteer_schedule.py
-        run: |
-          echo "✅ Running submission parser..."
-
-          cat << 'EOF' > parse_shifts.py
-          import sys
-          import json
-          import re
-          from datetime import datetime
-
-          lines = sys.stdin.read().strip().split('\n')
-          shifts = []
-
-          for line in lines:
-              try:
-                  parts = re.split(r'\s+[-–—]\s+', line)
-                  if len(parts) == 2:
-                      dt = datetime.strptime(parts[0].strip(), '%A %B %d, %Y, %I:%M %p')
-                      shifts.append({
-                          'date': dt.strftime('%Y-%m-%d'),
-                          'time': dt.strftime('%H:%M'),
-                          'role': parts[1].strip()
-                      })
-              except Exception as e:
-                  print(f'Skipping invalid line: {line} ({e})', file=sys.stderr)
-
-          print(json.dumps(shifts))
-          EOF
-
-          PARSED=$(echo "${{ steps.extract.outputs.shifts }}" | python3 parse_shifts.py)
-
-          echo "📦 Parsed JSON shifts: $PARSED"
-
-          python volunteer_schedule.py \
-            --name "${{ steps.extract.outputs.name }}" \
-            --phone "${{ steps.extract.outputs.phone }}" \
-            --shifts "$PARSED" \
-            --notify_sms
+          echo "${{ github.event.issue.body }}" | python process_submission.py --issue-body - --notify_sms
