--- a/.github/workflows/parse-submission.yml
+++ b/.github/workflows/parse-submission.yml
@@ -35,3 +35,18 @@ jobs:
             '' \
             '### What shifts are you available for?' \
             'Monday July 22, 2025, 6:00 PM – Usher')" --notify-sms
+
+      - name: Commit and push updated schedule files
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git add volunteer_input.yaml docs/volunteer_schedule.json
+          git diff --staged
+          git commit -m "Update volunteer schedule after new submission" || echo "No changes to commit"
+          git push
+        env:
+          # Use GitHub token for push authentication
+          GITHUB_TOKEN: ${{ secrets.GH_PAT }}
+
+      - name: Print updated volunteer_input.yaml
+        run: cat volunteer_input.yaml
