--- a/.github/ISSUE_TEMPLATE/volunteer_submission.yml
+++ b/.github/ISSUE_TEMPLATE/volunteer_submission.yml
@@ -25,8 +25,8 @@ body:
       label: Notify me via SMS
       description: Would you like to receive SMS reminders for your shifts?
       options:
-        - Yes
-        - No
+        - "Yes"
+        - "No"
 
   - type: textarea
     id: shifts
