--- a/.github/workflows/deploy-dashboard.yml
+++ b/.github/workflows/deploy-dashboard.yml
@@ -42,6 +42,7 @@ jobs:
   deploy:
     needs: build-and-push
     runs-on: ubuntu-latest
+
     steps:
       - name: Deploy to server via SSH
         if: ${{ secrets.SERVER_HOST != '' }}
@@ -54,4 +55,4 @@ jobs:
             docker pull ${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}
             docker stop volunteer-dashboard || true
             docker rm volunteer-dashboard || true
-            docker run -d --restart unless-stopped --name volunteer-dashboard -p 8080:8080 ${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}
+            docker run -d --name volunteer-dashboard -p 8080:8080 ${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}
