--- a/.github/workflows/parse-submission.yml
+++ b/.github/workflows/parse-submission.yml
@@ -46,3 +46,11 @@ jobs:
 
       - name: Print updated volunteer_input.yaml
         run: cat volunteer_input.yaml
+
+      - name: Send SMS notifications to volunteers who opted in
+        env:
+          CLICKSEND_USERNAME: ${{ secrets.CLICKSEND_USERNAME }}
+          CLICKSEND_API_KEY: ${{ secrets.CLICKSEND_API_KEY }}
+        run: |
+          pip install clicksend-client pyyaml
+          python send_sms.py
